--- a/Desktop/EcuaprestApp/templates/base.html
+++ b/Desktop/EcuaprestApp/templates/base.html
@@ -23,6 +23,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- endinject -->
   <link rel="shortcut icon" href="static/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap4.min.css">
 </head>
 
 <body>
@@ -117,14 +118,9 @@
           <div class="sidebar-bg-options" id="sidebar-dark-theme">
             <div class="img-ss rounded-circle bg-dark border me-3"></div>Oscuro
           </div>
-          <p class="settings-heading mt-2">HEADER SKINS</p>
+          <p class="settings-heading mt-2"></p>
           <div class="color-tiles mx-0 px-4">
-            <div class="tiles success"></div>
-            <div class="tiles warning"></div>
-            <div class="tiles danger"></div>
-            <div class="tiles info"></div>
-            <div class="tiles dark"></div>
-            <div class="tiles default"></div>
+            
           </div>
         </div>
       </div>
@@ -139,11 +135,11 @@
             </a>
           </li>
 
-          <li class="nav-item nav-category">Forms and Datas</li>
+          <li class="nav-item nav-category"></li>
 
-          <li class="nav-item nav-category">pages</li>
+          <li class="nav-item nav-category"></li>
 
-          <li class="nav-item nav-category">help</li>
+          <li class="nav-item nav-category"></li>
         </ul>
       </nav>
       <!-- partial -->
@@ -274,6 +270,7 @@
   <!-- Custom js for this page-->
   <script src="static/js/dashboard.js"></script>
   <script src="static/js/Chart.roundedBarCharts.js"></script>
+  <script src="static/js/calendar.js"></script>
   <!-- End custom js for this page-->
 </body>
 
