--- a/Desktop/EcuaprestApp/templates/index.html
+++ b/Desktop/EcuaprestApp/templates/index.html
@@ -51,7 +51,7 @@
                         <div id="totalVisitors" class="progressbar-js-circle pr-2"></div>
                       </div>
                       <div>
-                        <p class="text-small mb-2">Total Visitors</p>
+                        <p class="text-small mb-2">Ganancias del dia</p>
                         <h4 class="mb-0 fw-bold">26.80%</h4>
                       </div>
                     </div>
@@ -62,8 +62,8 @@
                         <div id="visitperday" class="progressbar-js-circle pr-2"></div>
                       </div>
                       <div>
-                        <p class="text-small mb-2">Visits per day</p>
-                        <h4 class="mb-0 fw-bold">9065</h4>
+                        <p class="text-small mb-2">Visitantes por dia</p>
+                        <h4 class="mb-0 fw-bold">9062</h4>
                       </div>
                     </div>
                   </div>
@@ -199,16 +199,16 @@
           <div class="col-md-6 col-lg-6 grid-margin stretch-card">
             <div class="card card-rounded">
               <div class="card-body card-rounded">
-                <h4 class="card-title  card-title-dash">Recent Events</h4>
+                <h4 class="card-title  card-title-dash">Proximas cobranzas</h4>
                 <div class="list align-items-center border-bottom py-2">
                   <div class="wrapper w-100">
                     <p class="mb-2 font-weight-medium">
-                      Change in Directors
+                      Cliente 1
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="d-flex align-items-center">
                         <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
+                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
                       </div>
                     </div>
                   </div>
@@ -216,12 +216,12 @@
                 <div class="list align-items-center border-bottom py-2">
                   <div class="wrapper w-100">
                     <p class="mb-2 font-weight-medium">
-                      Other Events
+                      Cliente 2
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="d-flex align-items-center">
                         <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
+                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
                       </div>
                     </div>
                   </div>
@@ -229,34 +229,20 @@
                 <div class="list align-items-center border-bottom py-2">
                   <div class="wrapper w-100">
                     <p class="mb-2 font-weight-medium">
-                      Quarterly Report
+                      Cliente 3
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="d-flex align-items-center">
                         <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
+                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="list align-items-center border-bottom py-2">
-                  <div class="wrapper w-100">
-                    <p class="mb-2 font-weight-medium">
-                      Change in Directors
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="d-flex align-items-center">
-                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2019</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
                 <div class="list align-items-center pt-3">
                   <div class="wrapper w-100">
                     <p class="mb-0">
-                      <a href="#" class="fw-bold text-primary">Show all <i class="mdi mdi-arrow-right ms-2"></i></a>
+                      <a href="#" class="fw-bold text-primary">Ver mas <i class="mdi mdi-arrow-right ms-2"></i></a>
                     </p>
                   </div>
                 </div>
@@ -298,72 +284,6 @@
           <div class="col-12 grid-margin stretch-card">
             <div class="card card-rounded">
               <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="d-flex justify-content-between align-items-center">
-                      <h4 class="card-title card-title-dash">Todo list</h4>
-                      <div class="add-items d-flex mb-0">
-                        <!-- <input type="text" class="form-control todo-list-input" placeholder="What do you need to do today?"> -->
-                        <button
-                          class="add btn btn-icons btn-rounded btn-primary todo-list-add-btn text-white me-0 pl-12p"><i
-                            class="mdi mdi-plus"></i></button>
-                      </div>
-                    </div>
-                    <div class="list-wrapper">
-                      <ul class="todo-list todo-list-rounded">
-                        <li class="d-block">
-                          <div class="form-check w-100">
-                            <label class="form-check-label">
-                              <input class="checkbox" type="checkbox"> Lorem Ipsum is simply dummy text
-                              of the printing <i class="input-helper rounded"></i>
-                            </label>
-                            <div class="d-flex mt-2">
-                              <div class="ps-4 text-small me-3">24 June 2020</div>
-                              <div class="badge badge-opacity-warning me-3">Due tomorrow</div>
-                              <i class="mdi mdi-flag ms-2 flag-color"></i>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="d-block">
-                          <div class="form-check w-100">
-                            <label class="form-check-label">
-                              <input class="checkbox" type="checkbox"> Lorem Ipsum is simply dummy text
-                              of the printing <i class="input-helper rounded"></i>
-                            </label>
-                            <div class="d-flex mt-2">
-                              <div class="ps-4 text-small me-3">23 June 2020</div>
-                              <div class="badge badge-opacity-success me-3">Done</div>
-                            </div>
-                          </div>
-                        </li>
-                        <li>
-                          <div class="form-check w-100">
-                            <label class="form-check-label">
-                              <input class="checkbox" type="checkbox"> Lorem Ipsum is simply dummy text
-                              of the printing <i class="input-helper rounded"></i>
-                            </label>
-                            <div class="d-flex mt-2">
-                              <div class="ps-4 text-small me-3">24 June 2020</div>
-                              <div class="badge badge-opacity-success me-3">Done</div>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="border-bottom-0">
-                          <div class="form-check w-100">
-                            <label class="form-check-label">
-                              <input class="checkbox" type="checkbox"> Lorem Ipsum is simply dummy text
-                              of the printing <i class="input-helper rounded"></i>
-                            </label>
-                            <div class="d-flex mt-2">
-                              <div class="ps-4 text-small me-3">24 June 2020</div>
-                              <div class="badge badge-opacity-danger me-3">Expired</div>
-                            </div>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -375,7 +295,7 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                      <h4 class="card-title card-title-dash">Type By Amount</h4>
+                      <h4 class="card-title card-title-dash"></h4>
                     </div>
                     <canvas class="my-auto" id="doughnutChart" height="200"></canvas>
                     <div id="doughnut-chart-legend" class="mt-5 text-center"></div>
@@ -393,18 +313,18 @@
                   <div class="col-lg-12">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                       <div>
-                        <h4 class="card-title card-title-dash">Leave Report</h4>
+                        <h4 class="card-title card-title-dash"></h4>
                       </div>
                       <div>
-                        <div class="dropdown">
+                        <!--  <div class="dropdown">
                           <button class="btn btn-secondary dropdown-toggle toggle-dark btn-lg mb-0 me-0" type="button"
                             id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"> Month Wise </button>
-                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                            aria-expanded="false"> </button>
+                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
                             <h6 class="dropdown-header">week Wise</h6>
                             <a class="dropdown-item" href="#">Year Wise</a>
-                          </div>
-                        </div>
+                          </div> 
+                        </div> -->
                       </div>
                     </div>
                     <div class="mt-3">
